--- a/documentation/asciidoc/topics/proc_adding_cache_auth_secrets.adoc
+++ b/documentation/asciidoc/topics/proc_adding_cache_auth_secrets.adoc
@@ -1,12 +1,10 @@
 [id='cache_auth-{context}']
-= Adding Credentials to Create Caches
-{ispn_operator} must authenticate with {datagridservice} clusters to create
-caches. You add credentials to a secret so that {ispn_operator} can access your
-cluster when creating caches.
+= Adding Credentials for {ispn_operator}
+{ispn_operator} must authenticate with {datagridservice} clusters to create caches.
+You add credentials to a secret so that {ispn_operator} can access your cluster when creating caches.
 
-The following procedure explains how to add credentials to a new secret. If you
-have a custom secret that contains credentials, you can use that instead of
-creating a new one.
+The following procedure explains how to add credentials to a new secret.
+If you already have a custom secret that contains credentials, you can use that instead of creating a new one.
 
 .Procedure
 
@@ -27,7 +25,6 @@ metadata:
   name: basic-auth <3>
 type: Opaque
 ----
-+
 <1> Names a user that can create caches.
 <2> Specifies the password that corresponds to the user.
 <3> Specifies a name for the secret.
