--- a/documentation/asciidoc/topics/proc_encrypting_endpoints_tls_secret.adoc
+++ b/documentation/asciidoc/topics/proc_encrypting_endpoints_tls_secret.adoc
@@ -1,14 +1,13 @@
 [id='using_custom_tls-{context}']
 = Using Custom TLS Certificates
-Use custom PKCS12 keystore or TLS certificate/key pairs to encrypt connections
-between clients and {brandname} clusters.
+Use custom PKCS12 keystore or TLS certificate/key pairs to encrypt connections between clients and {brandname} clusters.
 
 .Prerequisites
 
-Create either a keystore or certificate secret. See:
+* Create either a keystore or certificate secret. See:
 
-* link:#ref_tls_cert_secret-security[Certificate Secrets]
-* link:#ref_tls_keystore_secret-security[Keystore Secrets]
+* link:#ref_tls_cert_secret-tls[Certificate Secrets]
+* link:#ref_tls_keystore_secret-tls[Keystore Secrets]
 
 .Procedure
 
