--- a/documentation/asciidoc/topics/proc_getting_internal_service.adoc
+++ b/documentation/asciidoc/topics/proc_getting_internal_service.adoc
@@ -1,10 +1,8 @@
 [id='internal_service-{context}']
 = Getting the Service for Internal Connections
-By default, {ispn_operator} creates a service that provides access to
-{brandname} clusters from clients running in {k8s}.
+By default, {ispn_operator} creates a service that provides access to {brandname} clusters from clients running on {k8s}.
 
-This internal service has the same name as your {brandname} cluster, for
-example:
+This internal service has the same name as your {brandname} cluster, for example:
 
 [source,yaml,options="nowrap",subs=attributes+]
 ----
@@ -24,6 +22,7 @@ NAME               TYPE        CLUSTER-IP       EXTERNAL-IP   PORT(S)
 {example_crd_name} ClusterIP   192.0.2.0        <none>        11222/TCP
 ----
 
-.Reference
+[role="_additional-resources"]
+.Additional resources
 
 * link:#ref_services-ref[Network Services]
