--- a/documentation/asciidoc/topics/ref_cacheservice_resources.adoc
+++ b/documentation/asciidoc/topics/ref_cacheservice_resources.adoc
@@ -3,46 +3,5 @@
 
 [source,options="nowrap",subs=attributes+]
 ----
-apiVersion: infinispan.org/v1
-kind: Infinispan
-metadata:
-  name: {example_crd_name} <1>
-spec:
-  replicas: 4 <2>
-  service:
-    type: Cache <3>
-    replicationFactor: 2 <4>
-  autoscale: <5>
-    maxMemUsagePercent: 70
-    maxReplicas: 5
-    minMemUsagePercent: 30
-    minReplicas: 2
-  security:
-    endpointSecretName: endpoint-identities <6>
-    endpointEncryption: <7>
-        type: Secret
-        certSecretName: tls-secret
-  container: <8>
-    extraJvmOpts: "-XX:NativeMemoryTracking=summary"
-    cpu: "2000m"
-    memory: 1Gi
-  logging: <9>
-    categories:
-      org.infinispan: trace
-      org.jgroups: trace
-  expose: <10>
-    type: LoadBalancer
-  affinity <11>
+include::yaml/cache_service.yaml[]
 ----
-
-<1> Names the {brandname} cluster.
-<2> Specifies the number of nodes in the cluster.
-<3> Creates {cacheservice} clusters. This is the default for the `Infinispan` CR.
-<4> Configures the number of replicas for each cache entry across the cluster.
-<5> Enables and configures automatic cluster scaling.
-<6> Adds an authentication secret with user credentials.
-<7> Adds a custom encryption secret for secure connections.
-<8> Allocates resources to nodes.
-<9> Configures logging.
-<10> Configures services for external traffic.
-<11> Configures affinity and anti-affinity strategies.
