--- a/documentation/asciidoc/topics/ref_secret_tls_keystore.adoc
+++ b/documentation/asciidoc/topics/ref_secret_tls_keystore.adoc
@@ -8,4 +8,4 @@ include::yaml/secret_tls_keystore.yaml[]
 
 <1> Specifies an alias for the keystore.
 <2> Specifies a password for the keystore.
-<3> Adds a base64 encoded keystore.
+<3> Adds a base64-encoded keystore.
