--- a/documentation/asciidoc/stories/assembly_anti_affinity.adoc
+++ b/documentation/asciidoc/stories/assembly_anti_affinity.adoc
@@ -1,3 +1,4 @@
+ifdef::context[:parent-context: {context}]
 [id='anti_affinity']
 :context: availability
 = Guaranteeing Availability with Anti-Affinity
