--- a/documentation/asciidoc/stories/assembly_configuring_authentication.adoc
+++ b/documentation/asciidoc/stories/assembly_configuring_authentication.adoc
@@ -1,13 +1,13 @@
+ifdef::context[:parent-context: {context}]
 [id='authentication']
-:context: security
+:context: authn
 = Configuring Authentication
-Application users must authenticate with {brandname} clusters. {ispn_operator}
-generates default credentials or you can add your own.
+Application users need credentials to access {brandname} clusters.
+You can use default, generated credentials or add your own.
 
 include::{topics}/ref_default_credentials.adoc[leveloffset=+1]
-include::{topics}/proc_get_cluster_credentials.adoc[leveloffset=+1]
-include::{topics}/ref_identities.adoc[leveloffset=+1]
-include::{topics}/proc_adding_custom_credentials.adoc[leveloffset=+1]
+include::{topics}/proc_retrieving_credentials.adoc[leveloffset=+1]
+include::{topics}/proc_adding_credentials.adoc[leveloffset=+1]
 
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
