--- a/documentation/asciidoc/titles/operator.asciidoc
+++ b/documentation/asciidoc/titles/operator.asciidoc
@@ -2,7 +2,7 @@
 :toc2:
 :icons: font
 :toclevels: 3
-:numbered:
+:sectnums:
 :docinfo: private-head,private-footer
 
 //Avoid symlinks in community docs
