--- a/documentation/asciidoc/topics/ref_datagridservice_resources.adoc
+++ b/documentation/asciidoc/topics/ref_datagridservice_resources.adoc
@@ -3,56 +3,5 @@
 
 [source,yaml,options="nowrap",subs=attributes+]
 ----
-apiVersion: infinispan.org/v1
-kind: Infinispan
-metadata:
-  name: {example_crd_name} <1>
-spec:
-  replicas: 6 <2>
-  service:
-    type: DataGrid <3>
-    container:
-      storage: 2Gi <4>
-    sites: <5>
-      local:
-      name: NYC
-      expose:
-        type: LoadBalancer
-      locations:
-      - name: azure
-        url: openshift://api.azure.host:6443
-        secretName: azure-token
-      - name: aws
-        url: openshift://api.aws.host:6443
-        secretName: aws-token
-  security:
-    endpointSecretName: endpoint-identities <6>
-    endpointEncryption: <7>
-        type: Secret
-        certSecretName: tls-secret
-  container: <8>
-    extraJvmOpts: "-XX:NativeMemoryTracking=summary"
-    cpu: "1000m"
-    memory: 1Gi
-  logging: <9>
-    categories:
-      org.infinispan: debug
-      org.jgroups: debug
-      org.jgroups.protocols.TCP: error
-      org.jgroups.protocols.relay.RELAY2: fatal
-  expose: <10>
-    type: LoadBalancer
-  affinity <11>
+include::yaml/datagrid_service.yaml[]
 ----
-
-<1> Names the {brandname} cluster.
-<2> Specifies the number of nodes in the cluster.
-<3> Creates {datagridservice} clusters.
-<4> Configures size of the persistent volume.
-<5> Provides connection information for backup locations.
-<6> Adds an authentication secret with user credentials.
-<7> Adds a custom encryption secret for secure connections.
-<8> Allocates resources to nodes.
-<9> Configures logging.
-<10> Configures services for external traffic.
-<11> Configures affinity and anti-affinity strategies.
