--- a/documentation/asciidoc/topics/ref_secret_tls_certificate.adoc
+++ b/documentation/asciidoc/topics/ref_secret_tls_certificate.adoc
@@ -6,5 +6,5 @@
 include::yaml/secret_tls_cert.yaml[]
 ----
 
-<1> Adds a base64 encoded TLS key.
-<2> Adds a base64 encoded TLS certificate.
+<1> Adds a base64-encoded TLS key.
+<2> Adds a base64-encoded TLS certificate.
