--- a/documentation/asciidoc/topics/ref_services.adoc
+++ b/documentation/asciidoc/topics/ref_services.adoc
@@ -67,6 +67,7 @@ Allows {brandname} to back up data between clusters in different locations.
 
 |===
 
-.Reference
+[role="_additional-resources"]
+.Additional resources
 
 link:#network_services[Creating Network Services]
