doc issue #812 client connection details

--- a/documentation/asciidoc/stories/assembly_backing_up_restoring.adoc
+++ b/documentation/asciidoc/stories/assembly_backing_up_restoring.adoc
@@ -1,3 +1,4 @@
+ifdef::context[:parent-context: {context}]
 [id='backing_restoring']
 :context: backup_restore
 = Backing Up and Restoring {brandname} Clusters
