--- a/documentation/asciidoc/stories/assembly_manually_connecting_clusters.adoc
+++ b/documentation/asciidoc/stories/assembly_manually_connecting_clusters.adoc
@@ -1,3 +1,4 @@
+ifdef::context[:parent-context: {context}]
 [id='manually_connecting_clusters']
 :context: xsite_manual
 = Manually Connecting {brandname} Clusters
