--- a/documentation/asciidoc/topics/proc_configuring_sites_automatically.adoc
+++ b/documentation/asciidoc/topics/proc_configuring_sites_automatically.adoc
@@ -96,8 +96,9 @@ include::cmd_examples/oc_grep_xsite.adoc[]
 If your clusters have formed a cross-site view, you can start adding backup
 locations to caches.
 
-.Reference
+[role="_additional-resources"]
+.Additional resources
 
 * link:#ref_xsite_crd_automatic-xsite_operator[Cross-Site Replication Resources]
-* link:#adding_backup_locations-caches[Adding Backup Locations to Caches]
+* link:#adding_backup_locations-cache-cr[Adding Backup Locations to Caches]
 * link:{xsite_docs}[{brandname} Guide to Cross-Site Replication]
