--- a/documentation/asciidoc/stories/assembly_automatically_connecting_clusters.adoc
+++ b/documentation/asciidoc/stories/assembly_automatically_connecting_clusters.adoc
@@ -1,3 +1,4 @@
+ifdef::context[:parent-context: {context}]
 [id='automatically_connecting_clusters']
 :context: xsite_operator
 = Automatically Connecting {brandname} Clusters
