--- a/documentation/asciidoc/topics/ref_datagridservice_resources.adoc
+++ b/documentation/asciidoc/topics/ref_datagridservice_resources.adoc
@@ -3,62 +3,5 @@
 
 [source,yaml,options="nowrap",subs=attributes+]
 ----
-apiVersion: infinispan.org/v1
-kind: Infinispan
-metadata:
-  name: {example_crd_name} <1>
-spec:
-  replicas: 6 <2>
-  service:
-    type: DataGrid <3>
-    container: <4>
-      storage: 2Gi
-      ephemeralStorage: false
-      storageClassName: my-storage-class
-    sites: <5>
-      local:
-      name: azure
-      expose:
-        type: LoadBalancer
-      locations:
-      - name: azure
-        url: openshift://api.azure.host:6443
-        secretName: azure-token
-      - name: aws
-        clusterName: {example_crd_name} <6>
-        namespace: {example_namespace} <7>
-        url: openshift://api.aws.host:6443
-        secretName: aws-token
-  security:
-    endpointSecretName: endpoint-identities <8>
-    endpointEncryption: <9>
-        type: Secret
-        certSecretName: tls-secret
-  container: <10>
-    extraJvmOpts: "-XX:NativeMemoryTracking=summary"
-    cpu: "1000m"
-    memory: 1Gi
-  logging: <11>
-    categories:
-      org.infinispan: debug
-      org.jgroups: debug
-      org.jgroups.protocols.TCP: error
-      org.jgroups.protocols.relay.RELAY2: fatal
-  expose: <12>
-    type: LoadBalancer
-  affinity <13>
+include::yaml/datagrid_service.yaml[]
 ----
-
-<1> Names the {brandname} cluster.
-<2> Specifies the number of nodes in the cluster.
-<3> Creates {datagridservice} clusters.
-<4> Configures node storage resources.
-<5> Provides connection information for backup locations.
-<6> Specifies the name of the {brandname} cluster at the backup location if it does not match the name of the local cluster.
-<7> Specifies the {k8s} namespace for the {brandname} cluster at the backup location if it is not the same as the local cluster.
-<8> Adds an authentication secret with user credentials.
-<9> Adds a custom encryption secret for secure connections.
-<10> Allocates resources to nodes.
-<11> Configures logging.
-<12> Configures services for external traffic.
-<13> Configures affinity and anti-affinity strategies.
